<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button6"
        android:layout_width="97dp"
        android:layout_height="85dp"
        android:background="#0F9EDE"
        android:text="@string/B"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button10"
        android:layout_width="97dp"
        android:layout_height="85dp"
        android:background="#0F9EDE"
        android:text="@string/E"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/button11"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button14"
        android:layout_width="97dp"
        android:layout_height="85dp"
        android:background="#0F9EDE"
        android:text="@string/H"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button10"
        app:layout_constraintEnd_toStartOf="@+id/button15"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button15"
        android:layout_width="97dp"
        android:layout_height="85dp"
        android:background="#0F9EDE"
        android:text="@string/I"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintEnd_toStartOf="@+id/button16"
        app:layout_constraintStart_toEndOf="@+id/button14" />

    <Button
        android:id="@+id/button16"
        android:layout_width="97dp"
        android:layout_height="85dp"
        android:background="#0F9EDE"
        android:text="@string/J"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button12"
        app:layout_constraintEnd_toStartOf="@+id/button17"
        app:layout_constraintStart_toEndOf="@+id/button15" />

    <Button
        android:id="@+id/button17"
        android:layout_width="97dp"
        android:layout_height="85dp"
        android:background="#D28415"
        android:text="@string/N"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button16" />

    <Button
        android:id="@+id/button11"
        android:layout_width="97dp"
        android:layout_height="85dp"
        android:background="#0F9EDE"
        android:text="@string/F"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/button12"
        app:layout_constraintStart_toEndOf="@+id/button10" />

    <Button
        android:id="@+id/button12"
        android:layout_width="97dp"
        android:layout_height="85dp"
        android:background="#0F9EDE"
        android:text="@string/G"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/button13"
        app:layout_constraintStart_toEndOf="@+id/button11" />

    <Button
        android:id="@+id/button13"
        android:layout_width="97dp"
        android:layout_height="85dp"
        android:background="#D28415"
        android:text="@string/M"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button12" />

    <Button
        android:id="@+id/button7"
        android:layout_width="97dp"
        android:layout_height="85dp"
        android:background="#0F9EDE"
        android:text="@string/C"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintStart_toEndOf="@+id/button6" />

    <Button
        android:id="@+id/button8"
        android:layout_width="97dp"
        android:layout_height="85dp"
        android:background="#0F9EDE"
        android:text="@string/D"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintStart_toEndOf="@+id/button7" />

    <Button
        android:id="@+id/button9"
        android:layout_width="97dp"
        android:layout_height="85dp"
        android:background="#D28415"
        android:text="@string/L"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.77"
        app:layout_constraintStart_toEndOf="@+id/button8" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="403dp"
        android:layout_height="64dp"
        android:background="#0E86E5"
        android:text="@string/text_name"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="97dp"
        android:layout_height="85dp"
        android:background="#0F9EDE"
        android:text="@string/A"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="97dp"
        android:layout_height="85dp"
        android:background="#0F9EDE"
        android:text="@string/P"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintStart_toEndOf="@+id/button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="97dp"
        android:layout_height="85dp"
        android:background="#D28415"
        android:text="@string/O"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button4" />

    <Button
        android:id="@+id/button4"
        android:layout_width="97dp"
        android:layout_height="85dp"
        android:background="#0F9EDE"
        android:text="@string/K"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="406dp"
        android:layout_height="329dp"
        android:layout_marginTop="12dp"
        android:gravity="bottom|right"
        android:text="@string/A"
        android:textIsSelectable="false"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/button15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>